Click and drag of the 3d cursor turns off proportional editing #85494

Closed
opened 2021-02-09 10:49:46 +01:00 by Yegor · 6 comments

System Information
Operating system: Linux-3.10.0-1127.13.1.el7.x86_64-x86_64-with-centos-7.8.2003-Core 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: 5be9ef4177, 2.92 beta

Short description of error
Click and drag of the 3d cursor turns off proportional editing
2021-02-09 12-45-21.mp4

Exact steps for others to reproduce the error

  • Turn on proportional editing

  • Click and drag the 3d cursor with the corresponding tool selected -> proportional editing turns off

**System Information** Operating system: Linux-3.10.0-1127.13.1.el7.x86_64-x86_64-with-centos-7.8.2003-Core 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.2, branch: master, commit date: 2021-01-19 16:15, hash: `5be9ef4177`, 2.92 beta **Short description of error** Click and drag of the 3d cursor turns off proportional editing [2021-02-09 12-45-21.mp4](https://archive.blender.org/developer/F9746256/2021-02-09_12-45-21.mp4) **Exact steps for others to reproduce the error** - Turn on proportional editing - Click and drag the 3d cursor with the corresponding tool selected -> proportional editing turns off
Author

Added subscriber: @YegorSmirnov

Added subscriber: @YegorSmirnov
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm this on the latest 2.92.0 Beta, branch: master (modified), commit date: 2021-02-09 07:11, hash: 10f44a4135, although the option does not turn off visually. I have to hover over the proportional editing button or do some other action to see it turn off.

I can confirm this on the latest 2.92.0 Beta, branch: master (modified), commit date: 2021-02-09 07:11, hash: `10f44a4135`, although the option does not turn off visually. I have to hover over the proportional editing button or do some other action to see it turn off.
Falk David self-assigned this 2021-02-10 12:53:02 +01:00

This issue was referenced by 62f0d51681

This issue was referenced by 62f0d51681a9d810b8d5481467679194df6f4b83
Falk David removed their assignment 2021-02-10 18:12:58 +01:00
Germano Cavalcante was assigned by Falk David 2021-02-10 18:12:58 +01:00

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85494
No description provided.