Fix T85494: Moving 3d cursor will turn off prop edit

Moving the 3d cursor would turn off proportional editing.
This was caused by rBe91d5811676c but due to the fact that
the `use_proportional_edit` property was set when it shouldnt.

The fix clears that flag so proportional editing will not affect
the cursor transform.

Maniphest Tasks: T85494

Differential Revision: https://developer.blender.org/D10385